Forget password script added

--- a/AmazonAppiumFramework/src/test/resources/config.properties
+++ b/AmazonAppiumFramework/src/test/resources/config.properties
@@ -3,3 +3,8 @@ password=Aditya@123
 
 invalidemail=adityapawar
 invalidpassword=aditya@123
+
+name=Adity pawar
+Birthdate=4 july 1995
+emailsign=Adityapawar180@gmail.com
+passwordsign=Aditya@123
