--- a/AmazonAppiumFramework/pom.xml
+++ b/AmazonAppiumFramework/pom.xml
@@ -14,6 +14,10 @@
             </plugin>
         </plugins>
     </reporting>
+    <properties>
+        <maven.compiler.source>18</maven.compiler.source>
+        <maven.compiler.target>18</maven.compiler.target>
+    </properties>
 
     <build>
 
