GenerateRandomString and Signup scripts

--- a/AmazonAppiumFramework/src/test/resources/config.properties
+++ b/AmazonAppiumFramework/src/test/resources/config.properties
@@ -4,7 +4,9 @@ password=Aditya@123
 invalidemail=adityapawar
 invalidpassword=aditya@123
 
-name=Adity pawar
-Birthdate=4 july 1995
+name=dan mark
+
+Month ="05 April 2000" 
+Year = "2000" 
 emailsign=Adityapawar180@gmail.com
 passwordsign=Aditya@123
